# pgbouncer

./: .cirrus.yml  Makefile  configure.ac  meson.build  meson_options.txt
doc/: meson.build
include/common/: pg_wchar.h  postgres_compat.h
lib/usual/: base.h  meson.build
src/: janitor.c
test/: Makefile  conftest.py  meson.build  test_ssl.py  utils.py
