# Compilation options

option('cassert', type: 'boolean', value: false,
       description: 'Turn on assertion checking in code')

option('evdns', type: 'boolean', value: true,
       description: 'Use libevent for DNS lookups')

option('root-ca-file', type: 'string', value: 'auto',
       description: 'Specify where the root CA certificates are')

# External dependencies

option('cares', type: 'feature', value: 'auto',
       description: 'Build with c-ares support')

option('ldap', type: 'feature', value: 'auto',
       description: 'Build with LDAP support')

option('openssl', type: 'feature', value: 'auto',
       description: 'Build with OpenSSL support')

# TODO
option('pam', type: 'feature', value: 'auto',
       description: 'Build with PAM support')

option('systemd', type: 'feature', value: 'auto',
       description: 'Build with systemd support')
